2006-04-18  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (install-data-local): Rewrite. Set
	ownership and permissions for all files and directories
	under runtime and tapset. Restrict files to source code.
	* Makefile.in: Rebuilt.
	
2006-04-18  Eugene Teo  <eteo@redhat.com>

	PR 1341
	* main.cxx (main): Use TMPDIR instead of hard-coded /tmp.

2006-04-17  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (mark_derived_probe::emit_{de}registrations):
	Use cmpxchg to synchronize.

2006-04-12  Tom Zanussi  <zanussi@us.ibm.com>
	PR 2538
	* buildrun.cxx (compile_pass): Remove space
	between -I and runtime path.

2006-04-12  Martin Hunt  <hunt@redhat.com>
	PR 2497	 
	* translate.cxx (translate_pass): Don't
	reset STP_STRING_SIZE if it was already defined.
	Set it to 1024 by default.

2006-04-10  Martin Hunt  <hunt@redhat.com>

	* translate.cxx (visit_print_format): Call
	_stp_snprintf() instead of snprintf().

2006-04-09  Martin Hunt  <hunt@redhat.com>
	Add binary printf support.
	
	* elaborate.cxx (visit_print_format): Don't include
	conv_literal or conv_size  in components vector.
	Add conv_binary to switch statement.
	
	* translate.cxx (visit_print_format): Eliminate
	special cast to (long long) for pe_long because new
	vsnprintf uses int64_t.

	* staptree.h (struct print_format): Add conv_binary and conv_size.

	* staptree.cxx (components_to_string): Add conv_binary case.
	Add conv_size case.
	(string_to_components): Add cases for 'b' and 'n'

2006-04-08  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (resolve_prologue_endings): Rewrote.
	(resolve_prologue_endings2): Removed.

	* gen-stapmark.h: Emit a 0-arity marker.
	* stapmark.h: Regenerated for arities 0..6.

2006-04-04  Roland McGrath  <roland@redhat.com>

	* configure.ac: Bump version to 0.5.5.
	Require elfutils-0.120.
	* configure: Regenerated.
	* systemtap.spec.in: Likewise.

	* main.cxx (version): Use dwfl_version.

	* loc2c.c (array_stride): stride_size -> byte_stride
